--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,110 @@
-.App {
-  text-align: center;
+
+.chatBody::-webkit-scrollbar {
+  width: 3px;
+}
+ 
+.chatBody::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+}
+ 
+.chatBody::-webkit-scrollbar-thumb {
+  background-color: darkgrey;
+  outline: 1px solid slategrey;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.homeContainer, .chatContainer{
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
 }
 
-.App-link {
-  color: #61dafb;
+.homeContainer{
+  height: 100vh;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.homeContainer > input{
+  margin: 30px 0;
+  padding: 10px;
+  width: 30%;
+  border-radius: 4px;
+  outline: none;
+  border: 1px solid lightgray;
+}
+
+.button{
+  background-color: #1d3557;
+  color: #fff;
+  padding: 10px 30px;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.chatBody{
+  height: 90vh;
+  width: 90%;
+  max-height: 80vh;
+  overflow-y: auto;
+  padding: 10px 0;
+
+}
+
+.footer{
+  height : 10vh;
+  width: 90%;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+}
+
+.footer > input{
+  width: calc(100% - 200px);
+  padding: 10px;
+  min-height: 30px;
+  border-radius: 4px;
+}
+.footer > div{
+  background-color: #1d3557;
+  color:#fff;
+  border-radius: 4px;
+  padding: 10px 30px;
+  cursor: pointer;
+}
+
+.notification{
+  position: fixed;
+  right: 10px;
+  top: 10px;
+  background-color: #1d3557;
+  color: #fff;
+  padding: 10px 30px;
+}
+
+.chatTile{
+  background-color: #a8dadc;
+   color: #1d3557; 
+   padding: 10px 30px;
+    margin: 10px;
+  border-radius: 4px;
+    position: relative;
+}
+.tileName{
+  position: absolute;
+  right: 20px;
+  background-color: #1d3557;
+  top: 50%;
+  transform: translateY(-50%);
+  padding: 3px 7px;
+  border-radius: 4px;
+  color: #fff;
+}
+
+@media screen and (max-width: 768px) {
+  .footer{
+    justify-content: space-between;
   }
-  to {
-    transform: rotate(360deg);
+  .footer>input{
+    margin-left: 10px;
+    width: calc(100% - 140px);
   }
 }
